Fix menu spacing

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,8 @@ h1, footer {
     color: white;
     font-size: 16px;
     float: right;
-    }
+    padding-top: 30px;
+}
 
 .dropbtn {
     color:white;
